Add Intellij instructions
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>